--- a/NODE/4_Mysql/회원관리/package.json
+++ b/NODE/4_Mysql/회원관리/package.json
@@ -3,8 +3,10 @@
     "body-parser": "^1.20.2",
     "chokidar": "^3.6.0",
     "express": "^4.19.2",
+    "express-session": "^1.18.0",
     "mysql": "^2.18.1",
     "mysql2": "^3.10.2",
-    "nunjucks": "^3.2.4"
+    "nunjucks": "^3.2.4",
+    "session-file-store": "^1.5.0"
   }
 }
